// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KuiButton Baseline is rendered 1`] = `
<button
  className="kuiButton"
  onClick={[Function]}
>
  <span />
</button>
`;

exports[`KuiButton Props children is rendered 1`] = `
<button
  className="kuiButton"
  onClick={[Function]}
>
  <span>
    <span>
      Hello
    </span>
  </span>
</button>
`;

exports[`KuiButton Props className renders the classes 1`] = `
<button
  className="kuiButton testClass1 testClass2"
  onClick={[Function]}
>
  <span />
</button>
`;

exports[`KuiButton Props icon is rendered with children 1`] = `
<button
  className="kuiButton kuiButton--iconText"
  onClick={[Function]}
>
  <span>
    Icon
    <span>
      Hello
    </span>
  </span>
</button>
`;

exports[`KuiButton Props icon is rendered without children 1`] = `
<button
  className="kuiButton kuiButton--iconText"
  onClick={[Function]}
>
  <span>
    Icon
  </span>
</button>
`;

exports[`KuiButton Props isDisabled sets the disabled attribute 1`] = `
<button
  className="kuiButton"
  disabled={true}
  onClick={[Function]}
>
  <span />
</button>
`;

exports[`KuiButton Props isIconOnRight moves the icon to the right 1`] = `
<button
  className="kuiButton kuiButton--iconText"
  onClick={[Function]}
>
  <span>
    <span>
      Hello
    </span>
    Icon
  </span>
</button>
`;

exports[`KuiButton Props isLoading doesn't render the icon prop 1`] = `
<button
  className="kuiButton kuiButton--iconText"
  onClick={[Function]}
>
  <span>
    <KuiButtonIcon
      type="LOADING"
    />
  </span>
</button>
`;

exports[`KuiButton Props isLoading renders a spinner 1`] = `
<button
  className="kuiButton kuiButton--iconText"
  onClick={[Function]}
>
  <span>
    <KuiButtonIcon
      type="LOADING"
    />
  </span>
</button>
`;

exports[`KuiButton Props testSubject is rendered 1`] = `
<button
  className="kuiButton"
  data-test-subj="test subject string"
  onClick={[Function]}
>
  <span />
</button>
`;

exports[`KuiButton Props type basic renders the basic class 1`] = `
<button
  class="kuiButton kuiButton--basic"
>
  <span />
</button>
`;

exports[`KuiButton Props type danger renders the danger class 1`] = `
<button
  class="kuiButton kuiButton--danger"
>
  <span />
</button>
`;

exports[`KuiButton Props type hollow renders the hollow class 1`] = `
<button
  class="kuiButton kuiButton--hollow"
>
  <span />
</button>
`;

exports[`KuiButton Props type primary renders the primary class 1`] = `
<button
  class="kuiButton kuiButton--primary"
>
  <span />
</button>
`;
